Bug 1632544 - reinstate startup and script cache invalidation for build ID and minor version changes, r=mossop

Differential Revision: https://phabricator.services.mozilla.com/D72371